# letter-boxed

./: .gitignore  README.md  pyproject.toml
letter_boxed/: main.py
